--- a/presentation/public/scss/screen.scss
+++ b/presentation/public/scss/screen.scss
@@ -9,3 +9,24 @@ body {
 
 	background-color: #9f3d3d;
 }
+
+
+.grav-button {
+	display: block;
+	height: 100px;
+	width: 100px;
+	padding: 40px;
+	text-align: center;
+	background-color: #4d4d4d;
+	color: #ffffff;
+	margin: 0 auto;
+	margin-top: 300px;
+	border-radius: 50%;
+	font-size: 24px;
+}
+
+
+.reset {
+
+	
+}
