--- a/presentation/public/css/reveal.css
+++ b/presentation/public/css/reveal.css
@@ -405,7 +405,7 @@ body {
 	display: none;
 	height: 3px;
 	width: 100%;
-	bottom: 0;
+	top: 0;
 	left: 0;
 	z-index: 10;
 }
@@ -1258,4 +1258,10 @@ body {
 	visibility: hidden;
 }
 
-
+/*********************************************
+ * CUSTOM O
+ *********************************************/
+.product h2 { 
+	
+		font-size: 1.4em;
+	}
