--- a/presentation/public/css/theme/embark.css
+++ b/presentation/public/css/theme/embark.css
@@ -97,6 +97,25 @@ body {
       font-family: 'Damion', cursive, helvetica, sans-serif;
  }
 
+.reveal .nova {
+
+     font-family: 'proxima_nova_ltbold', Helvetica, Arial, sans-serif;
+     letter-spacing: 8px;
+     text-transform: uppercase;
+     font-size: 1.6em;
+
+
+}
+.reveal .novalt {
+
+     font-family: 'proxima_nova_ltbold', Helvetica, Arial, sans-serif;
+     letter-spacing: 4px;
+     text-transform: uppercase;
+     font-size: 0.4em;
+     line-height: 160%;
+
+
+}
 
  .reveal p {
 
