--- a/presentation/public/css/theme/embark.css
+++ b/presentation/public/css/theme/embark.css
@@ -144,8 +144,16 @@ body {
 
 .reveal .mission {
 
-  font-size: 1em;
-  font-family: proxima_nova_ltbold, Helvetica, Arial, sans-serif;
+  font-family: 'proxima_nova_ltbold', Helvetica, Arial, sans-serif;
+     letter-spacing: 2px;
+     text-transform: uppercase;
+     font-size: 0.7em;
+     line-height: 160%;
+}
+
+.web {
+
+  margin-top: 50px;
 }
 /*.quote {
 
