--- a/presentation/public/scss/screen.scss
+++ b/presentation/public/scss/screen.scss
@@ -44,7 +44,8 @@ body {
 .team-member {
 
 	float: left;
-	padding: 40px;
+	width: 260px;
+	padding: 30px;
 }
 .team-photo {
 	height: 200px;
@@ -79,9 +80,32 @@ body {
 
 }
 
+#web-item {
+
+	background-image: url(../img/);
+	height: 100px;
+	width: 100px;
+	margin: 0 auto;
+
+
+	margin-bottom: 40px;
+
+}
+
 .product p {
 
 		text-align: justify;
 }
+@media 	only screen and (-webkit-min-device-pixel-ratio: 2),
+		only screen and (-moz-min-device-pixel-ratio: 2),
+		only screen and (min-device-pixel-ratio: 2) {
 
+
+				#project-lucid {
+
+					background: url(../img/lucid@2x.png) #ddd no-repeat center center 100px 100px ;
+				}
+
+
+		}
 
