added icons to product slide

--- a/presentation/public/scss/screen.scss
+++ b/presentation/public/scss/screen.scss
@@ -68,27 +68,26 @@ body {
 
 
 .product-item {
-
-	background-color: #4d4d4d;
 	height: 100px;
 	width: 100px;
-	margin: 0 auto;
-
-
-	margin-bottom: 40px;
+	margin: 0 auto;margin-bottom: 40px;
 	@include border-radius(100%)
 
 }
 
 #web-item {
 
-	background-image: url(../img/);
-	height: 100px;
-	width: 100px;
-	margin: 0 auto;
+	background: url(../img/icon-digital.png) no-repeat;
 
+}
+#exp-item {
 
-	margin-bottom: 40px;
+	background: url(../img/icon-experiential.png) no-repeat;
+
+}
+#video-item {
+
+	background: url(../img/icon-production.png) no-repeat;
 
 }
 
@@ -96,14 +95,29 @@ body {
 
 		text-align: justify;
 }
+
 @media 	only screen and (-webkit-min-device-pixel-ratio: 2),
 		only screen and (-moz-min-device-pixel-ratio: 2),
 		only screen and (min-device-pixel-ratio: 2) {
 
 
-				#project-lucid {
+				#web-item {
 
-					background: url(../img/lucid@2x.png) #ddd no-repeat center center 100px 100px ;
+					background: url(../img/icon-digital@2x.png) no-repeat;
+					background-size: 100px;
+				}
+
+				#exp-item {
+
+					background: url(../img/icon-experiential@2x.png) no-repeat;
+					background-size: 100px;
+
+				}
+				#video-item {
+
+					background: url(../img/icon-production@2x.png)  no-repeat;
+					background-size: 100px;
+
 				}
 
 
