--- a/presentation/css/theme/embark.css
+++ b/presentation/css/theme/embark.css
@@ -42,9 +42,9 @@
     font-family: 'proxima_nova_ltbold';
     src: url('../../fonts/proximanova-semibold-webfont.eot');
     src: url('../../fonts/proximanova-semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../../fonts/proximanova-semibold-webfont.svg#proxima_nova_ltbold') format('svg'),
          url('../../fonts/proximanova-semibold-webfont.woff') format('woff'),
-         url('../../fonts/proximanova-semibold-webfont.ttf') format('truetype');
+         url('../../fonts/proximanova-semibold-webfont.ttf') format('truetype'),
+         url('../../fonts/proximanova-semibold-webfont.svg#proxima_nova_ltbold') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -116,7 +116,21 @@ body {
 
 
 }
+.vid-over {
 
+  z-index:9999; 
+  color: #fff; 
+  font-family: 'proxima_nova_ltbold', Helvetica, Arial, sans-serif;
+     letter-spacing: 4px;
+     text-transform: uppercase;
+     font-size: 1.4em;
+     line-height: 160%;
+     text-align: center;
+     position: absolute;
+     top: 250px;
+     width: 100%;
+     opacity: 0.5;
+}
  .reveal p {
 
     margin-bottom: 10px;
