--- a/presentation/scss/screen.scss
+++ b/presentation/scss/screen.scss
@@ -16,17 +16,28 @@ body {
 
 .grav-button {
 	display: block;
-	height: 100px;
-	width: 100px;
-	padding: 40px;
-	text-align: center;
-	background-color: #4d4d4d;
-	color: #ffffff;
-	margin: 0 auto;
-	margin-top: 300px;
-	border-radius: 50%;
-	font-size: 24px;
+		font-family: "proxima_nova_rgregular", Helvetica, Arial, sans-serif;
+		-webkit-font-smoothing: antialiased;
+		font-size: 11pt;
+		letter-spacing:1pt;
+		text-transform: uppercase;
+		text-align: center;
+		padding: 10px 10px;
+		border: 2px solid #888;
+		border-radius: 5px;
+		width: 200px;
+		margin: 0 auto;
+		margin-top: 20%;
+		color: #333;
+		cursor: default;
 }
+.grav-button:hover {
+	opacity: 0.5;
+};
+.grav-button:active {
+	border: 2px solid #33334d;
+	color: #33334d;
+};
 
 .embark-logo {
 
